--- a/TrabajoAIS/res/values/styles.xml
+++ b/TrabajoAIS/res/values/styles.xml
@@ -17,4 +17,9 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <!-- UcoRasca Theme -->
+    <style name="UcoRascaTheme" parent="android:style/Theme.NoTitleBar">
+        
+    </style>
+    
 </resources>
